added some features